-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11.0.9, 15, 16
-
Component/s: hotspot
-
b07
-
generic
-
generic
MemberNameLeak test is failing when running in STW mode, because ResolvedMethodTable never receives a gc_notification() call, which is usually done by calling report_num_dead() on the corresponding oop-storage. We do that in concurrent-weak-processing, but apparently not during STW weak processing.
- relates to
-
JDK-8249884 Shenandoah: Call report_num_dead() from ShParallelWeakRootsCleaningTask destructor
-
- Resolved
-
-
JDK-8248391 Unify handling of all OopStorage instances in weak root processing
-
- Resolved
-