8249877: Shenandoah: Report number of dead weak oops during STW weak roots

Reviewed-by: zgu